chore: release packages v1.0.1

--- a/packages/page/react/src/styles/index.css
+++ b/packages/page/react/src/styles/index.css
@@ -1,1 +1,3 @@
+@import "@admin-core/form-react/style.css";
+@import "@admin-core/table-react/style.css";
 @import "@admin-core/page-core/styles/page.css";
